--- a/release 1.0/03-frontend/angular-ecommerce/src/index.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
- 	<title>AngularEcommerce</title>
+ 	<title>Jenny's Shop</title>
 	<base href="/">
-	<link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+	<link rel="icon" type="image" href="assets/images/jenny-logo.png">
 </head>
 <body>
   <app-root></app-root>
